--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to my first page</h1>
-        <h3>This is Version 2.0 & a work in progress</h3>
+        <h1>Welcome to my page</h1>
         <nav>
             <ul>
                 <li><a class="active" href="index.html">Homepage</a></li>
@@ -23,8 +22,9 @@
     <main>
         <section class="intro">
             <div class="intro-text">
+                <h3>(This is Version 2.0 & still under development)</h3>
                 <p>My name is Leon Johansson and this is my first project working with HTML and CSS.</p>
-                <p>This is me, feel free to have a look around :)</p>
+                <p>This is me, and feel free to have a look around :)</p>
             </div>
             <div class="intro-image">
                 <img src="Images/ProfilPic.jpeg" alt="Profilpic">
