--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>My portfolio (So far)</h1>
+        <h1>My portfolio</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Homepage</a></li>
@@ -20,28 +20,12 @@
         </nav>
     </header>
     <main>
-        <section class="portfolio">
-            <h1>Portfolio</h1>
-            <div class="project-container">
-                <div class="project">
-                    <h2>Bank Application</h2>
-                    <a href="#modal1" class="button">More Info</a>
-                    <a href="https://github.com/Conixen/GroupProject-Wookie-Warriors" class="github-link">GitHub Repository</a>
-                    <img src="Images/Image.Projet1.jpg" alt="Projekt 1">
-                </div>
-                <div class="project">
-                    <img src="projekt2.jpg" alt="Projekt 2">
-                    <h2>To be announced</h2>
-                    <a href="#modal2" class="button">More Info</a>
-                </div>
-            </div>
-        </section>
+        
     </main>
     <footer>
         <p>&copy; 2025 [Leon Johansson]</p>
     </footer>
-    
-    <div id="modal1" class="modal">
+    <!-- <div id="modal1" class="modal">
         <div class="modal-content">
             <a href="#" class="close">&times;</a>
             <h2>Bank Application</h2>
@@ -55,6 +39,23 @@
             <h2>Projekt 2</h2>
             <p>Mer information om Projekt 2.</p>
         </div>
-    </div>
+    </div> -->
+    <script src="script2.js"></script>
 </body>
 </html>
+<!-- <section class="portfolio">
+    <h1>Portfolio</h1>
+    <div class="project-container">
+        <div class="project">
+            <h2>Bank Application</h2>
+            <a href="#modal1" class="button">More Info</a>
+            <a href="https://github.com/Conixen/GroupProject-Wookie-Warriors" class="github-link">GitHub Repository</a>
+            <img src="Images/Image.Projet1.jpg" alt="Projekt 1">
+        </div>
+        <div class="project">
+            <img src="projekt2.jpg" alt="Projekt 2">
+            <h2>To be announced</h2>
+            <a href="#modal2" class="button">More Info</a>
+        </div>
+    </div>
+</section> -->
