--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,11 @@
         </nav>
     </header>
     <main>
-        
+        <section id="portfolio2">
+            <H3>Min github portfolio</H3>
+            <div id="loading">Loading in my projects...</div>
+            <div id="projects-container" class="project-container"></div>
+        </section>
     </main>
     <footer>
         <p>&copy; 2025 [Leon Johansson]</p>
